<resources>

    <string name="app_name">Science Car</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Science Car</string>
    <string name="title_activity_device_list">Bluetooth Device List </string>
    <string name="scanning">Scanning for Devices&#8230;</string>
    <string name="not_connected">Not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Closing this application.</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_connected_to">Connected to %s</string>
    <string name="title_not_connected">Not connected</string>
    <string name="select_device">Select a device to connect to</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices have been found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Bluetooth Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="button_connect">Connect to a device</string>
    <string name="title_activity_device_details">Device Details</string>
	<string name="speed_0">Stop</string>
	<string name="speed_1">Slowest</string>
	<string name="speed_2">Way way slow</string>
	<string name="speed_3">Way slow</string>
	<string name="speed_4">Less way slow</string>
	<string name="speed_5">Slow</string>
	<string name="speed_6">Easy going</string>
	<string name="speed_7">Cruising</string>
	<string name="speed_8">Moving right along</string>
	<string name="speed_9">Moving quick</string>
	<string name="speed_A">Moving quicker</string>
	<string name="speed_B">Moving pretty darn quick</string>
	<string name="speed_C">Fast</string>
	<string name="speed_D">Faster</string>
	<string name="speed_E">Fastest</string>
	<string name="speed_F">I lied, this is fastest</string>
	<string name="dir_N">Forward</string>
	<string name="dir_S">Backward</string>
	<string name="dir_W">Left</string>
	<string name="dir_E">Right</string>
	<string name="sensorHeader">Sensor values</string>
	<string name="sensorX">X: %+.2f</string>
	<string name="sensorY">Y: %+.2f</string>
	<string name="sensorZ">Z: %+.2f</string>
	<string name="scienceHeader">Science Car Values</string>
	<string name="speedTxt">Speed: %s</string>
	<string name="directionTxt">Direction: %s</string>
	<string name="commandTxt">Code: %s</string>
	<string name="buttonAdd">Add</string>
	<string name="buttonClear">Clear</string>
	<string name="buttonGo">Execute</string>
	<string name="title_commands">Commands</string>
	<string name="commandDisabled">Sensor commands disabled</string>
	<string name="codeprefix">0x</string>
	<string name="gluecodedelay">for</string>
	<string name="delayunit">seconds</string>
	<string name="editcodehint">1f</string>
	
</resources>