<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/sensorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/sensorHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/sensorY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensorHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/sensorY"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sensorX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sensorY"
        android:layout_alignBottom="@+id/sensorY"
        android:layout_toLeftOf="@+id/sensorHeader"
        android:text="@string/sensorX"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sensorZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sensorY"
        android:layout_toRightOf="@+id/sensorHeader"
        android:text="@string/sensorZ"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/scienceHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensorY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/scienceHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/speedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sensorHeader"
        android:layout_below="@+id/scienceHeader"
        android:layout_marginTop="21dp"
        android:text="@string/speedTxt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/directionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sensorHeader"
        android:layout_below="@+id/speedTxt"
        android:layout_marginTop="21dp"
        android:text="@string/directionTxt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/commandTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sensorHeader"
        android:layout_below="@+id/directionTxt"
        android:layout_marginTop="21dp"
        android:text="@string/commandTxt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editCode"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/codePrefix"
        android:ems="10"
        android:hint="@string/editcodehint">

        <requestFocus />
    </EditText>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/editCode"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/commandTxt"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_commands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_commands"
            android:textColor="#fff"
            android:visibility="gone" />

        <ListView
            android:id="@+id/commandList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:stackFromBottom="true" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonGo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/buttonGo" />

    <TextView
        android:id="@+id/codePrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editCode"
        android:layout_alignBottom="@+id/editCode"
        android:layout_alignParentLeft="true"
        android:text="@string/codeprefix"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/glueCodeDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editCode"
        android:layout_alignBottom="@+id/editCode"
        android:layout_toRightOf="@+id/editCode"
        android:text="@string/gluecodedelay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editDelay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/glueCodeDelay"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonClear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonGo"
        android:text="@string/buttonClear" />

    <TextView
        android:id="@+id/delayunit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/glueCodeDelay"
        android:layout_toRightOf="@+id/editDelay"
        android:text="@string/delayunit"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonAdd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/delayunit"
        android:text="@string/buttonAdd" />

    <ToggleButton
        android:id="@+id/toggleSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sensorHeader"
        android:layout_toRightOf="@+id/scienceHeader" />

</RelativeLayout>